# pagen

./: .gitignore  LICENSE  README.md  augment_gen.py  corpus.txt  detect_gen.py  edit_corners.py  eval_gen.py  generate_doc.py  pyproject.toml  requirements.txt  visualize_corners.py  visualize_detect.py
.github/workflows/: tests.yml
images/images_pics/: paper_corners.json
pagen/: __init__.py  __main__.py  _paths.py  augment.py  cli.py  corners.py  corpus.py  fonts.py  llm.py  pipeline.py  render.py  templates.py  text.py  visualize.py
resources/prompts/: fill_prompt.txt
resources/templates/: academic_essay.md  announcement.md  asset_inventory.md  attendance_record.md  attendance_record_orient.md  authorization_orient.md  bank_statement.md  book.md  book_orient.md  budget_plan.md  case_study.md  certificate_completion.md  cheque_request.md  committee_decision.md  company_profile.md  complaint_form.md  complaint_letter.md  contact_list.md  contract.md  contract_orient.md  contract_v2.md  credit_note.md  customs_declaration.md  cv.md  cv_orient.md  debit_note.md  exam.md  (+70 more)
templates/: annual_report_summary.md  authorization.md  authorization_orient.md  bank_statement_orient.md  biography.md  booking_confirmation.md  clearance_form.md  contract_orient.md  contract_v2_orient.md  cv_orient.md  cv_v2.md  cv_v2_orient.md  delivery_note.md  email.md  email_orient.md  exam.md  exam_orient.md  feedback_report.md  insurance_certificate.md  invoice_v2_orient.md  leave_request_orient.md  legal_notice.md  letter_orient.md  maintenance_request_orient.md  medical_report.md  menu_orient.md  nda_orient.md  news_article.md  newsletter.md  payroll_sheet.md  payroll_sheet_orient.md  petty_cash.md  power_of_attorney.md  promissory_note.md  promissory_note_orient.md  receipt.md  receipt_orient.md  recipe.md  recipe_orient.md  registration_form.md  (+18 more)
tests/: conftest.py
(+17 files in other folders)
